--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -23,3 +23,4 @@ $body-color: #111;
 @import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/type";
 // etc
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
