--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -25,6 +25,12 @@ $body-color: #111;
 // etc
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 
+.cardheader {
+  background: linear-gradient(to right, #ffcc00, rgba(57, 3, 107, 0.5));
+  color: white; /* Ajuste a cor do texto para melhor contraste */
+}
+
+
 li {
   list-style-type: none;
 }
